<resources>
    <string name="app_name">ShenCAREMobile</string>

    <!--login activity-->
    <string name="title_login">Login</string>
    <string name="button_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login_username">Username</string>
    <string name="login_pw">Password</string>
    <string name="action_sign_up_short">Sign Up</string>

    <!--Register Dropdown list-->
    <string name="regis_name">Name</string>
    <string name="regis_surname">Surname</string>
    <string name="regis_username">Username</string>
    <string name="regis_pw">Password</string>
    <string name="regis_cpw">Confirm Password</string>
    <string name="regis_email">Email Address</string>
    <string name="prompt_pot">Preferred occupational therapist</string>
    <string name="prompt_mpl">Most preferred location</string>


    <!--Volunteer Sign Up Function-->
    <string name="volimage">VolunteerImage</string>
    <string name="title_activity_login">Sign in</string>
    <string name="name">Y</string>
    <string name="volunteerName">Your Name (Required)</string>
    <string name="volunteerForm">Volunteer Sign Up Form</string>
    <string name="volunteerNameInput"></string>
    <string name="yourEmail">Your Email(Required)</string>
    <string name="volunteerEmailInput"></string>
    <string name="volunteerPhone">Your Phone number(Required)</string>
    <string name="volunteerPhoneInput"></string>
    <string name="work">The frequency of your voluntary work is</string>
    <string name="volunteerLeaveAMessage">Your Message</string>
    <string name="successMessage">Thanks for your participation!</string>
    <string name="vol_join">Join</string>

    <!--Form Validation Message-->
    <string name="form_contains_err">Please check mandatory fields!</string>
    <string name="RadioButton">Please select one</string>
    <string name="Checkbox">Please select at least one</string>

    <!--User Profile Function-->
    <string name="editProfileButton">Edit</string>
    <string name="saveProfileButton">Save</string>

    <!--Drawer Test-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_login">Login</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>

    <!--Service Details-->
    <string name="sd_procedure_and_prices">More information will be provided in the future.</string>
    <string name="sd_reviews">There are current no reviews available.</string>

    <!--EventDetails-->
    <string name="eventName">Fun at Marina Barrage</string>
    <string name="eventDate">10 February 2016</string>
    <string name="eventTime">1000hrs to 1600hrs</string>
    <string name="eventVenue">Marina Barrage</string>
    <string name="eventDetails">Bring your family along and have a day of fun with activities such as
    kite flying, Chinese chess, Chinese tea appreciation, Storytelling, and much more!!</string>
    <string name="bookEventWarning">You have to login first</string>

    <!--For Json Parsing-->
    <string name="eventsJSON"></string>
    <string name="servicesJSON"></string>
    <string name="usersJSON"></string>
    <string name="volJSON"></string>

    <!--Logout Info-->
    <string name="logoutInfo">You have successfully logged out</string>

    <!--Service Displaying Page-->
    <string name="defaultServiceMsg">ShenCARE is here to assist you with both long-term or respite solutions, providing precision information with excellent and professionally care service providers for live-in or live-out care.</string>
</resources>
