<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shencare.shencaremobile.VolunteerSignUp">

    <RelativeLayout
        android:id="@+id/vol_head_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/vol_head_pic"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/volunteer"
            android:layout_alignParentTop="true" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/vol_sign_up_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20px"
        android:paddingBottom="40px"
        android:layout_below="@id/vol_head_layout">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:isScrollContainer="false">

        <LinearLayout
            android:id="@+id/volunteer_sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vol_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volunteerName"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/fontColor" />

            <EditText
                android:id="@+id/vol_editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/volunteerNameInput"
                android:textColor="@color/fontColor" />

            <TextView
                android:id="@+id/vol_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourEmail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/fontColor" />


            <EditText
                android:id="@+id/vol_editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/volunteerEmailInput"
                android:textColor="@color/fontColor" />


            <TextView
                android:id="@+id/vol_textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volunteerPhone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/fontColor" />

            <EditText
                android:id="@+id/vol_editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/volunteerPhoneInput"
                android:textColor="@color/fontColor" />


            <TextView
                android:id="@+id/vol_freqOfWorkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/fontColor" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/freqOfWork">

                <RadioButton
                    android:id="@+id/freqOfWork_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Daily"
                    android:textColor="@color/fontColor" />

                <RadioButton
                    android:id="@+id/freqOfWork_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weekly"
                    android:textColor="@color/fontColor" />

                <RadioButton
                    android:id="@+id/freqOfWork_fortnightly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fortnightly"
                    android:textColor="@color/fontColor" />

                <RadioButton
                    android:id="@+id/freqOfWork_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Monthly"
                    android:textColor="@color/fontColor" />
            </RadioGroup>

            <TextView
                android:id="@+id/vol_preferWorkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You prefer to work"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:focusable="true"
                android:clickable="true"
                android:paddingTop="20px"
                android:focusableInTouchMode="true"
                android:textColor="@color/fontColor" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preferWorkSize"
                android:textColor="@color/fontColor">

                <RadioButton
                    android:id="@+id/preferGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="In Groups"
                    android:textColor="@color/fontColor" />

                <RadioButton
                    android:id="@+id/preferIndividual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="As an Individual"
                    android:textColor="@color/fontColor" />
            </RadioGroup>

            <TextView
                android:id="@+id/vol_checkBoxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please indicate your preferred areas to volunteer for "
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:paddingTop="20px"
                android:textColor="@color/fontColor" />

            <CheckBox
                android:id="@+id/volCheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Befriending"
                android:textColor="@color/fontColor" />

            <CheckBox
                android:id="@+id/volCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Escorts for Medical Appointment"
                android:textColor="@color/fontColor" />

            <CheckBox
                android:id="@+id/volCheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Excursions"
                android:textColor="@color/fontColor" />

            <CheckBox
                android:id="@+id/volCheckBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Spring Cleaning"
                android:textColor="@color/fontColor" />

            <CheckBox
                android:id="@+id/volCheckBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meals Delivery"
                android:textColor="@color/fontColor" />

            <TextView
                android:id="@+id/vol_textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volunteerLeaveAMessage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10px"
                android:textColor="@color/fontColor" />

            <EditText
                android:id="@+id/vol_msg_box"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:inputType="textCapSentences|textMultiLine"
                android:isScrollContainer="true"
                android:gravity="left|top"
                android:minLines="8"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:background="@drawable/vol_your_message_box"
                android:layout_marginBottom="20dip"
                android:textColor="@color/fontColor">
            </EditText>


            <Button
                android:id="@+id/joinVolunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vol_join"
                android:textAlignment="center"
                android:paddingTop="20px"
                android:paddingBottom="20px"
                android:textColor="@color/fontColor"
                android:background="@color/shen"/>

        </LinearLayout>
      </ScrollView>
    </RelativeLayout>

</RelativeLayout>
