<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.shencare.shencaremobile.UserLogin">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/shen"
        app:title="@string/title_login"
        app:titleTextColor="@color/toolbarTitleColor"/>

    <!-- Login progress -->

    <ScrollView android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_toolbar">

        <LinearLayout android:id="@+id/username_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:paddingTop="40dp" android:orientation="vertical">

            <TextView
                android:id="@+id/login_username_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_username"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/fontColor" />


            <AutoCompleteTextView android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/login_pw_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_pw"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/fontColor" />

            <EditText android:id="@+id/login_password" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/log_in_button"
                style="?android:textAppearanceLargePopupMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_login"
                android:onClick="Login"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/regis_link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Sign Up As A New User"
                    android:textColor="#5858f8"
                    android:textStyle="bold"
                    android:textSize = "45px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/forget_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Forget Password?"
                    android:textStyle="bold"
                    android:textColor="#5858f8"
                    android:textSize = "45px" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
