<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.shencare.shencaremobile.EventDetails"
    android:background="@drawable/eventdetailsdesign">

    <!-- Event photo -->
    <ImageView
        android:id="@+id/eventDetailsPic"
        android:layout_width="800dp"
        android:layout_height="175dp"
        android:scaleType="fitCenter"
        android:src="@drawable/happyelderly"
        android:background="@color/drawerList"/>


    <!-- Event Details Table-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventDetailsText"
        android:layout_below="@id/eventDetailsPic">
        <!-- NAME-->
        <TextView
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:text="@string/eventName"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingTop="3dp"
            android:layout_marginBottom="2dp"
            android:typeface="sans"
            android:background="@color/drawerList" />
        <!-- DATE-->
        <TextView
            android:id="@+id/eventDetailsDate"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@+id/eventName"
            android:paddingTop="5dp"
            android:background="@color/shen"
            android:text="Date"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/toolbarTitleColor"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="245dp"
            android:layout_height="40dp"
            android:layout_below="@+id/eventName"
            android:text="@string/eventDate"
            android:textSize="19dp"
            android:textAlignment="textEnd"
            android:layout_alignTop="@+id/eventDetailsDate"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/shen"/>
        <!-- TIME-->
        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@+id/eventDetailsDate"
            android:id="@+id/eventDetailsTime"
            android:text="Time"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/toolbarTitleColor"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:layout_marginTop="2dp"
            android:background="@color/drawerList"/>
        <TextView
            android:id="@+id/eventTime"
            android:layout_width="245dp"
            android:layout_height="40dp"
            android:layout_below="@+id/eventDate"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/eventTime"
            android:textSize="19dp"
            android:textAlignment="textEnd"
            android:paddingTop="10dp"
            android:layout_marginTop="2dp"
            android:gravity="end"
            android:paddingRight="10dp"
            android:background="@color/drawerList"
            />
        <!-- VENUE-->
        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@+id/eventTime"
            android:layout_marginTop="2dp"
            android:id="@+id/eventDetailsVenue"
            android:text="Venue"
            android:textColor="@color/toolbarTitleColor"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:background="@color/shen" />
        <TextView
            android:id="@+id/eventVenue"
            android:layout_width="245dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/eventVenue"
            android:textSize="19sp"
            android:paddingTop="10dp"
            android:layout_below="@+id/eventTime"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:paddingRight="10dp"
            android:layout_marginTop="2dp"
            android:background="@color/shen" />
        <!-- Details-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_below="@+id/eventVenue"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:paddingTop="8dp"
                android:text="Details"
                android:textSize="20sp"
                android:textColor="@color/toolbarTitleColor"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="@color/drawerList" />

            <ScrollView
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/eventDetails"
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eventDetails"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="8dp"

                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/drawerList"/>
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>
    <!-- register now button-->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="304px"
        android:layout_height="89px"
        android:layout_below="@+id/eventDetailsText"
        android:layout_centerInParent="true"
        android:paddingTop="50dp"
        android:background="@drawable/register_button"
        android:clickable="true"
        android:onClick="onClick" />


</RelativeLayout>
